[gd_scene load_steps=9 format=3 uid="uid://2s8n7v3j7nf4"]

[ext_resource type="Script" path="res://script/ui/turn_order_ui.gd" id="1_ewv71"]
[ext_resource type="Script" path="res://script/ui/battle_hud.gd" id="1_uc058"]
[ext_resource type="Texture2D" uid="uid://bdwgsps7msohv" path="res://assets/Background.png" id="1_yxa21"]
[ext_resource type="Texture2D" uid="uid://bga5pxyite2ig" path="res://assets/bar.png" id="2_5l0kr"]
[ext_resource type="PackedScene" uid="uid://ch0lwq7tq3m4q" path="res://scenes/actor_icon.tscn" id="4_romcy"]
[ext_resource type="FontFile" uid="uid://b23c0njeg0avg" path="res://data/PixelPurl8x8 (1).ttf" id="7_3reef"]
[ext_resource type="Texture2D" uid="uid://snsetagk3pb1" path="res://assets/card_art/energy_symbol.png" id="8_oret0"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_m6bb4"]

[node name="battle_hud" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_uc058")
_turn_order_path = NodePath("turn_order")
_card_label_path = NodePath("stat_screen/card_label")
_energy_label_path = NodePath("stat_screen/energy_ui/energy_counter/energy_amount")
_energy_label_2_path = NodePath("energy_ui2/energy_counter/energy_amount")
_deck_count_label_path = NodePath("stat_screen/deck_count_label")
_discard_count_label_path = NodePath("stat_screen/discard_count_label")
_attribute_label_path = NodePath("stat_screen/stat_label_1")
_attribute_label_2_path = NodePath("stat_screen/stat_label_2")
_actor_label_path = NodePath("actor_screen/actor_label")

[node name="turn_order" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 635.0
offset_bottom = 85.0
script = ExtResource("1_ewv71")
actor_icon_scene = ExtResource("4_romcy")
_actor_icon_container_path = NodePath("actor_bar_containers")

[node name="background" type="TextureRect" parent="turn_order"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxa21")
expand_mode = 1

[node name="borders" type="NinePatchRect" parent="turn_order"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5l0kr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="actor_bar_containers" type="HBoxContainer" parent="turn_order"]
layout_direction = 2
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 628.0
offset_bottom = 78.0
theme_override_constants/separation = 0

[node name="stat_screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 87.0
offset_right = 126.0
offset_bottom = 359.0

[node name="background" type="TextureRect" parent="stat_screen"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxa21")
expand_mode = 1

[node name="borders" type="NinePatchRect" parent="stat_screen"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5l0kr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="stat_label_1" type="RichTextLabel" parent="stat_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 61.0
offset_bottom = 52.0
theme_override_fonts/normal_font = ExtResource("7_3reef")
bbcode_enabled = true
text = "STR: 11
VIG: 12
INT: 8"

[node name="stat_label_2" type="RichTextLabel" parent="stat_screen"]
layout_mode = 0
offset_left = 60.0
offset_top = 4.0
offset_right = 116.0
offset_bottom = 52.0
theme_override_fonts/normal_font = ExtResource("7_3reef")
bbcode_enabled = true
text = "DEX: 12
DEF: 10
ARC: 6"

[node name="energy_ui" type="Control" parent="stat_screen"]
anchors_preset = 0
offset_left = 5.0
offset_top = 55.0
offset_right = 61.0
offset_bottom = 70.0

[node name="energy_title_label" type="Label" parent="stat_screen/energy_ui"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -7.0
offset_right = 38.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_3reef")
text = "Energy:"

[node name="energy_counter" type="Control" parent="stat_screen/energy_ui"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -7.5
offset_right = 1.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2

[node name="energy_background" type="TextureRect" parent="stat_screen/energy_ui/energy_counter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_oret0")

[node name="energy_amount" type="Label" parent="stat_screen/energy_ui/energy_counter"]
layout_mode = 0
offset_left = 5.0
offset_top = -1.0
offset_right = 11.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("7_3reef")
text = "3"

[node name="deck_count_label" type="Label" parent="stat_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 72.0
offset_right = 118.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("7_3reef")
text = "Deck: 10"
autowrap_mode = 3

[node name="discard_count_label" type="Label" parent="stat_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 87.0
offset_right = 118.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("7_3reef")
text = "Discard Pile: 0"
autowrap_mode = 3

[node name="card_label" type="RichTextLabel" parent="stat_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 111.0
offset_right = 117.0
offset_bottom = 270.0
theme_override_fonts/normal_font = ExtResource("7_3reef")
bbcode_enabled = true
text = "No card selected."

[node name="energy_ui2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 455.0
offset_top = 306.0
offset_right = 511.0
offset_bottom = 321.0

[node name="energy_title_label" type="Label" parent="energy_ui2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -7.0
offset_right = 38.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_3reef")
text = "Energy:"

[node name="energy_counter" type="Control" parent="energy_ui2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -7.5
offset_right = 1.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2

[node name="energy_background" type="TextureRect" parent="energy_ui2/energy_counter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_oret0")

[node name="energy_amount" type="Label" parent="energy_ui2/energy_counter"]
layout_mode = 0
offset_left = 5.0
offset_top = -1.0
offset_right = 11.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("7_3reef")
text = "3"

[node name="actor_screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 514.0
offset_top = 87.0
offset_right = 635.0
offset_bottom = 359.0

[node name="background" type="TextureRect" parent="actor_screen"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxa21")
expand_mode = 1

[node name="borders" type="NinePatchRect" parent="actor_screen"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5l0kr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="actor_label" type="Label" parent="actor_screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 117.0
offset_bottom = 268.0
theme_override_fonts/font = ExtResource("7_3reef")
text = "Player:
HP: 200/200
ARMOR: 0
SPD: 130

Burn (x36): Deals 10 damage for each stack, then removes 1 stack. Scales with ARC (A)."
autowrap_mode = 3

[node name="tooltip" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 128.0
offset_top = 201.0
offset_right = 250.0
offset_bottom = 273.0

[node name="background" type="TextureRect" parent="tooltip"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxa21")
expand_mode = 1

[node name="borders" type="NinePatchRect" parent="tooltip"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5l0kr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="card_label" type="RichTextLabel" parent="tooltip"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("7_3reef")
bbcode_enabled = true
text = "Burn: On turn start, deals 10 damage per stack and lose 1 stack. Scales with ARC (A)."
scroll_active = false

[node name="tooltip2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 128.0
offset_top = 275.0
offset_right = 250.0
offset_bottom = 307.0

[node name="background" type="TextureRect" parent="tooltip2"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxa21")
expand_mode = 1

[node name="borders" type="NinePatchRect" parent="tooltip2"]
material = SubResource("CanvasItemMaterial_m6bb4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5l0kr")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="card_label" type="RichTextLabel" parent="tooltip2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("7_3reef")
bbcode_enabled = true
text = "Multistrike 2: Deals damage twice."
scroll_active = false
